--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
     "next": "latest",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.12",
+    "@types/react": "^17.0.37",
+    "typescript": "^4.5.3"
   }
 }
